# airflow-provider-flightpath

./: README.md  pyproject.toml
flightpath_server_provider/: __init__.py
flightpath_server_provider/hooks/: __init__.py  flightpath_server.py
flightpath_server_provider/operators/: __init__.py  flightpath_server.py
tests/hooks/: test_flightpath_server_hook.py
tests/operators/: test_flightpath_server_operator.py
